<resources>
    <string name="app_name">MyChatRoom</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="signup">SignUp</string>
    <string name="login">Login</string>

    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="write_message_here">Write message here</string>
    <string name="message">Message</string>

</resources>